CSS Logical Properties in Divide Width utilities Switching to logical properties to fix compatibilty issues with non LTR layouts.

--- a/__tests__/fixtures/tailwind-output-no-color-opacity.css
+++ b/__tests__/fixtures/tailwind-output-no-color-opacity.css
@@ -1014,8 +1014,8 @@ video {
 
 .divide-x-0 > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(0px * var(--divide-x-reverse));
-  border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(0px * var(--divide-x-reverse));
+  border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y-2 > :not(template) ~ :not(template) {
@@ -1026,8 +1026,8 @@ video {
 
 .divide-x-2 > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(2px * var(--divide-x-reverse));
-  border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(2px * var(--divide-x-reverse));
+  border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y-4 > :not(template) ~ :not(template) {
@@ -1038,8 +1038,8 @@ video {
 
 .divide-x-4 > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(4px * var(--divide-x-reverse));
-  border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(4px * var(--divide-x-reverse));
+  border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y-8 > :not(template) ~ :not(template) {
@@ -1050,8 +1050,8 @@ video {
 
 .divide-x-8 > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(8px * var(--divide-x-reverse));
-  border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(8px * var(--divide-x-reverse));
+  border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y > :not(template) ~ :not(template) {
@@ -1062,8 +1062,8 @@ video {
 
 .divide-x > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(1px * var(--divide-x-reverse));
-  border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(1px * var(--divide-x-reverse));
+  border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y-reverse > :not(template) ~ :not(template) {
@@ -17187,8 +17187,8 @@ video {
 
   .sm\:divide-x-0 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(0px * var(--divide-x-reverse));
+    border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y-2 > :not(template) ~ :not(template) {
@@ -17199,8 +17199,8 @@ video {
 
   .sm\:divide-x-2 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(2px * var(--divide-x-reverse));
-    border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(2px * var(--divide-x-reverse));
+    border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y-4 > :not(template) ~ :not(template) {
@@ -17211,8 +17211,8 @@ video {
 
   .sm\:divide-x-4 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(4px * var(--divide-x-reverse));
-    border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(4px * var(--divide-x-reverse));
+    border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y-8 > :not(template) ~ :not(template) {
@@ -17223,8 +17223,8 @@ video {
 
   .sm\:divide-x-8 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(8px * var(--divide-x-reverse));
-    border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(8px * var(--divide-x-reverse));
+    border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y > :not(template) ~ :not(template) {
@@ -17235,8 +17235,8 @@ video {
 
   .sm\:divide-x > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(1px * var(--divide-x-reverse));
+    border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y-reverse > :not(template) ~ :not(template) {
@@ -33330,8 +33330,8 @@ video {
 
   .md\:divide-x-0 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(0px * var(--divide-x-reverse));
+    border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y-2 > :not(template) ~ :not(template) {
@@ -33342,8 +33342,8 @@ video {
 
   .md\:divide-x-2 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(2px * var(--divide-x-reverse));
-    border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(2px * var(--divide-x-reverse));
+    border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y-4 > :not(template) ~ :not(template) {
@@ -33354,8 +33354,8 @@ video {
 
   .md\:divide-x-4 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(4px * var(--divide-x-reverse));
-    border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(4px * var(--divide-x-reverse));
+    border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y-8 > :not(template) ~ :not(template) {
@@ -33366,8 +33366,8 @@ video {
 
   .md\:divide-x-8 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(8px * var(--divide-x-reverse));
-    border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(8px * var(--divide-x-reverse));
+    border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y > :not(template) ~ :not(template) {
@@ -33378,8 +33378,8 @@ video {
 
   .md\:divide-x > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(1px * var(--divide-x-reverse));
+    border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y-reverse > :not(template) ~ :not(template) {
@@ -49473,8 +49473,8 @@ video {
 
   .lg\:divide-x-0 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(0px * var(--divide-x-reverse));
+    border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y-2 > :not(template) ~ :not(template) {
@@ -49485,8 +49485,8 @@ video {
 
   .lg\:divide-x-2 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(2px * var(--divide-x-reverse));
-    border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(2px * var(--divide-x-reverse));
+    border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y-4 > :not(template) ~ :not(template) {
@@ -49497,8 +49497,8 @@ video {
 
   .lg\:divide-x-4 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(4px * var(--divide-x-reverse));
-    border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(4px * var(--divide-x-reverse));
+    border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y-8 > :not(template) ~ :not(template) {
@@ -49509,8 +49509,8 @@ video {
 
   .lg\:divide-x-8 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(8px * var(--divide-x-reverse));
-    border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(8px * var(--divide-x-reverse));
+    border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y > :not(template) ~ :not(template) {
@@ -49521,8 +49521,8 @@ video {
 
   .lg\:divide-x > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(1px * var(--divide-x-reverse));
+    border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y-reverse > :not(template) ~ :not(template) {
@@ -65616,8 +65616,8 @@ video {
 
   .xl\:divide-x-0 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(0px * var(--divide-x-reverse));
+    border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y-2 > :not(template) ~ :not(template) {
@@ -65628,8 +65628,8 @@ video {
 
   .xl\:divide-x-2 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(2px * var(--divide-x-reverse));
-    border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(2px * var(--divide-x-reverse));
+    border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y-4 > :not(template) ~ :not(template) {
@@ -65640,8 +65640,8 @@ video {
 
   .xl\:divide-x-4 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(4px * var(--divide-x-reverse));
-    border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(4px * var(--divide-x-reverse));
+    border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y-8 > :not(template) ~ :not(template) {
@@ -65652,8 +65652,8 @@ video {
 
   .xl\:divide-x-8 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(8px * var(--divide-x-reverse));
-    border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(8px * var(--divide-x-reverse));
+    border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y > :not(template) ~ :not(template) {
@@ -65664,8 +65664,8 @@ video {
 
   .xl\:divide-x > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(1px * var(--divide-x-reverse));
+    border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y-reverse > :not(template) ~ :not(template) {
