--- a/__tests__/fixtures/tailwind-output.css
+++ b/__tests__/fixtures/tailwind-output.css
@@ -1014,8 +1014,8 @@ video {
 
 .divide-x-0 > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(0px * var(--divide-x-reverse));
-  border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(0px * var(--divide-x-reverse));
+  border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y-2 > :not(template) ~ :not(template) {
@@ -1026,8 +1026,8 @@ video {
 
 .divide-x-2 > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(2px * var(--divide-x-reverse));
-  border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(2px * var(--divide-x-reverse));
+  border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y-4 > :not(template) ~ :not(template) {
@@ -1038,8 +1038,8 @@ video {
 
 .divide-x-4 > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(4px * var(--divide-x-reverse));
-  border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(4px * var(--divide-x-reverse));
+  border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y-8 > :not(template) ~ :not(template) {
@@ -1050,8 +1050,8 @@ video {
 
 .divide-x-8 > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(8px * var(--divide-x-reverse));
-  border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(8px * var(--divide-x-reverse));
+  border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y > :not(template) ~ :not(template) {
@@ -1062,8 +1062,8 @@ video {
 
 .divide-x > :not(template) ~ :not(template) {
   --divide-x-reverse: 0;
-  border-right-width: calc(1px * var(--divide-x-reverse));
-  border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+  border-inline-end-width: calc(1px * var(--divide-x-reverse));
+  border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
 }
 
 .divide-y-reverse > :not(template) ~ :not(template) {
@@ -18531,8 +18531,8 @@ video {
 
   .sm\:divide-x-0 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(0px * var(--divide-x-reverse));
+    border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y-2 > :not(template) ~ :not(template) {
@@ -18543,8 +18543,8 @@ video {
 
   .sm\:divide-x-2 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(2px * var(--divide-x-reverse));
-    border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(2px * var(--divide-x-reverse));
+    border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y-4 > :not(template) ~ :not(template) {
@@ -18555,8 +18555,8 @@ video {
 
   .sm\:divide-x-4 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(4px * var(--divide-x-reverse));
-    border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(4px * var(--divide-x-reverse));
+    border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y-8 > :not(template) ~ :not(template) {
@@ -18567,8 +18567,8 @@ video {
 
   .sm\:divide-x-8 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(8px * var(--divide-x-reverse));
-    border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(8px * var(--divide-x-reverse));
+    border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y > :not(template) ~ :not(template) {
@@ -18579,8 +18579,8 @@ video {
 
   .sm\:divide-x > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(1px * var(--divide-x-reverse));
+    border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
   }
 
   .sm\:divide-y-reverse > :not(template) ~ :not(template) {
@@ -36018,8 +36018,8 @@ video {
 
   .md\:divide-x-0 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(0px * var(--divide-x-reverse));
+    border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y-2 > :not(template) ~ :not(template) {
@@ -36030,8 +36030,8 @@ video {
 
   .md\:divide-x-2 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(2px * var(--divide-x-reverse));
-    border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(2px * var(--divide-x-reverse));
+    border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y-4 > :not(template) ~ :not(template) {
@@ -36042,8 +36042,8 @@ video {
 
   .md\:divide-x-4 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(4px * var(--divide-x-reverse));
-    border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(4px * var(--divide-x-reverse));
+    border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y-8 > :not(template) ~ :not(template) {
@@ -36054,8 +36054,8 @@ video {
 
   .md\:divide-x-8 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(8px * var(--divide-x-reverse));
-    border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(8px * var(--divide-x-reverse));
+    border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y > :not(template) ~ :not(template) {
@@ -36066,8 +36066,8 @@ video {
 
   .md\:divide-x > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(1px * var(--divide-x-reverse));
+    border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
   }
 
   .md\:divide-y-reverse > :not(template) ~ :not(template) {
@@ -53505,8 +53505,8 @@ video {
 
   .lg\:divide-x-0 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(0px * var(--divide-x-reverse));
+    border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y-2 > :not(template) ~ :not(template) {
@@ -53517,8 +53517,8 @@ video {
 
   .lg\:divide-x-2 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(2px * var(--divide-x-reverse));
-    border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(2px * var(--divide-x-reverse));
+    border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y-4 > :not(template) ~ :not(template) {
@@ -53529,8 +53529,8 @@ video {
 
   .lg\:divide-x-4 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(4px * var(--divide-x-reverse));
-    border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(4px * var(--divide-x-reverse));
+    border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y-8 > :not(template) ~ :not(template) {
@@ -53541,8 +53541,8 @@ video {
 
   .lg\:divide-x-8 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(8px * var(--divide-x-reverse));
-    border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(8px * var(--divide-x-reverse));
+    border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y > :not(template) ~ :not(template) {
@@ -53553,8 +53553,8 @@ video {
 
   .lg\:divide-x > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(1px * var(--divide-x-reverse));
+    border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
   }
 
   .lg\:divide-y-reverse > :not(template) ~ :not(template) {
@@ -70992,8 +70992,8 @@ video {
 
   .xl\:divide-x-0 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(0px * var(--divide-x-reverse));
-    border-left-width: calc(0px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(0px * var(--divide-x-reverse));
+    border-inline-start-width: calc(0px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y-2 > :not(template) ~ :not(template) {
@@ -71004,8 +71004,8 @@ video {
 
   .xl\:divide-x-2 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(2px * var(--divide-x-reverse));
-    border-left-width: calc(2px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(2px * var(--divide-x-reverse));
+    border-inline-start-width: calc(2px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y-4 > :not(template) ~ :not(template) {
@@ -71016,8 +71016,8 @@ video {
 
   .xl\:divide-x-4 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(4px * var(--divide-x-reverse));
-    border-left-width: calc(4px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(4px * var(--divide-x-reverse));
+    border-inline-start-width: calc(4px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y-8 > :not(template) ~ :not(template) {
@@ -71028,8 +71028,8 @@ video {
 
   .xl\:divide-x-8 > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(8px * var(--divide-x-reverse));
-    border-left-width: calc(8px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(8px * var(--divide-x-reverse));
+    border-inline-start-width: calc(8px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y > :not(template) ~ :not(template) {
@@ -71040,8 +71040,8 @@ video {
 
   .xl\:divide-x > :not(template) ~ :not(template) {
     --divide-x-reverse: 0;
-    border-right-width: calc(1px * var(--divide-x-reverse));
-    border-left-width: calc(1px * calc(1 - var(--divide-x-reverse)));
+    border-inline-end-width: calc(1px * var(--divide-x-reverse));
+    border-inline-start-width: calc(1px * calc(1 - var(--divide-x-reverse)));
   }
 
   .xl\:divide-y-reverse > :not(template) ~ :not(template) {
