--- a/src/components/GradientLockup.module.css
+++ b/src/components/GradientLockup.module.css
@@ -4,7 +4,13 @@
 
 @screen lg {
   .root {
-    grid-template-columns: 2rem 1fr 52.5% 2rem;
+    grid-template-columns: 2rem 1fr 59.375% 2rem;
     grid-template-rows: auto 2.25rem auto 2.25rem;
+  }
+}
+
+@screen xl {
+  .root {
+    grid-template-columns: 2rem 1fr 52.5% 2rem;
   }
 }
