--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,3 +9,12 @@
 /*! purgecss end ignore */
 
 @import 'utilities.css';
+
+.mono > div:not(.not-mono) > span {
+  color: rgba(255, 255, 255, 0.5);
+}
+
+code span {
+  transition-duration: 0.5s;
+  transition-property: background-color, border-color, color, fill, stroke;
+}
